--- a/window/index.html
+++ b/window/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="../utilities/style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+        <link rel="stylesheet" href="../utilities/style.css">
+    </head>
 <body>
-    <h1 id="test">Test</h1>
+    <div class="container">
+        <div class="box">
+            <select name="" id="com"></select>
+            <select name="" id="baud"></select>
+            <button onclick="confirm()">conferma</button>
+        </div>
+    </div>
 </body>
+<script src="../utilities/lib.js"></script>
+<script src="../utilities/script.js"></script>
 </html>
+
