--- a/window/chat.html
+++ b/window/chat.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../utilities/style.css">
-
 </head>
 <body>
     <div class="navbar">
@@ -15,26 +14,12 @@
         <span><img src="../resource/info.png" alt="" class="icon">INFO</span>
     </div>
     <div class="body toolbar">
-        <div class="messagebox dx">
-            <img src="../resource/user.png" alt="" class="user">
-            <span class="thumb"></span>
-            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum mollitia nulla quod, optio quas deserunt voluptatum quam expedita sapiente vitae, possimus nesciunt ab. Voluptas soluta distinctio, pariatur inventore iure vero.</div>
-        </div>
-        <div class="messagebox">
-            <img src="../resource/terminal.png" alt="" class="user">
-            <span class="thumb"></span>
-            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum mollitia nulla quod,
-                optio quas deserunt voluptatum quam expedita sapiente vitae, possimus nesciunt ab. Voluptas soluta
-                distinctio, pariatur inventore iure vero.</div>
-        </div>
-                
         <div class="input">
-            <input type="text" placeholder="Writedown a message">
-            <button id="send"></button>
+            <input type="text" id="userMsg" placeholder="Writedown a message">
+            <button id="send" onclick="user()"></button>
         </div>
     </div>
-    <script src="../utilities/lib.js"></script>
     <script src="../utilities/chat.js"></script>
-    
+    <script src="../utilities/lib.js"></script>
 </body>
 </html>
